# Ankh

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
ankh/: __init__.py  extract.py  pretrained.py  utils.py
ankh/downstream_models/: __init__.py  convbert_binary_classification.py  convbert_multiclass_classification.py  convbert_regression.py
ankh/models/: __init__.py  ankh_transformers.py  convbert_binary_classification.py  convbert_multiclass_classification.py  convbert_regression.py  layers.py
examples/: binary_classifcation_task.ipynb  binary_classification_solubility_task.ipynb  hyperparameter_tuning_using_wandb.py  regression_fluorescence_task.ipynb  regression_fluorescence_task_using_tensorflow.ipynb  regression_fluorosence_task.ipynb  secondary_structure_prediction_3_states.ipynb  simple_generation.ipynb
src/ankh/: __init__.py  extract.py  likelihood.py  utils.py
src/ankh/models/: __init__.py  ankh_transformers.py  contact_prediction.py  convbert_binary_classification.py  convbert_contact_prediction.py  convbert_multiclass_classification.py  convbert_multilabel_classification.py  convbert_regression.py  layers.py  utils.py
vespa_analysis/: README.md  vespa.yml  vespa_eval.py  vespa_msa.py  vespa_pair.py
vespa_analysis/plots/: description.txt
