[tool.poetry]
name = "ankh"
version = "0.00.0"
description = "Optimized Protein Language Model"
authors = ["Ahmed Elnaggar <amit.najjar@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
