[tool.poetry]
name = "ankh"
version = "0.00.7"
description = "Optimized Protein Language Model"
authors = ["Ahmed Elnaggar <amit.najjar@gmail.com>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
include = [
    "LICENSE.md",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
