[tool.poetry]
name = "ankh"
version = "1.10.0"
description = "Optimized Protein Language Model"
authors = ["Ahmed Elnaggar <amit.najjar@gmail.com>", "Hazem Essam <hazemessam199@gmail.com>"]
keywords = ["ankh"]
repository = "https://github.com/agemagician/Ankh"
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
include = [
    "LICENSE.md",
    "README.md",
]

packages = [
    { include = "ankh", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
biopython = "^1.80"
transformers = "^4.25.1"
sentencepiece = "^0.1.97"
datasets = "^2.7.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
